Bug 64031 - Lowercase External names ranges go to "Impossible d'actualiser le lien."
Summary: Lowercase External names ranges go to "Impossible d'actualiser le lien."
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.alpha1
Hardware: Other Linux (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.1.0.0.beta2 target:4.2.0...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-04-29 05:55 UTC by Herve
Modified: 2013-06-26 11:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Herve 2013-04-29 05:55:38 UTC
Problem description: 

linking an lowercase external named range cell don't work.
Upercase are ok.

Steps to reproduce:
1. File 1 Test1 
2. File 2 Test2 with A1 named range1 and A2 named RANGE3
3. In Test1 on A1 "Insert" -> "Lien vers des données externes"(something like data from external link ? )
URL = Test2 range = range1  => "Impossible d'actualiser le lien." (don't know it in english)
4. In Test1 on A1 "Insert" -> "Lien vers des données externes"(something like data from external link ? )
URL = Test2 range = RANGE3 => OK  

Current behavior:

lowercase external named range link go wrong, and upercase are good

Expected behavior:

All upercase and lowercase named range link are ok

              
Operating System: Linux (Other)
Version: 3.6.6.2 release
Last worked in: 4.0.1.1 rc
Comment 1 Joel Madero 2013-05-24 16:51:04 UTC
Please attach a test1 and test2 file, with the steps given I'm not able to follow the instructions - much easier if we just have an exact copy of files that you are seeing the issue on.

Marking as NEEDINFO, once you attach a zip of the relevant files we will investigate.

Also, want to verify the info you provided:

you say it's broken on 3.6.6.2 release but works on 4.0.1.1 rc? Does it work on 4.0.3.3 release? If so it's likely going to be marked as WFM as these releases are newer and thus the problem has been solved.
Comment 2 Markus Mohrhard 2013-05-27 11:28:57 UTC
I think I have a fix for it.
Comment 3 Commit Notification 2013-05-27 11:51:18 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5651e793d2a55e3ab7f4e731252d7c678f1e37c0&h=libreoffice-4-1

range names need to be checked upper case, fdo#64031


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-05-27 11:51:55 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1ea2722b0d13632818142b84fa7989fb9d5085f

range names need to be checked upper case, fdo#64031



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Markus Mohrhard 2013-05-27 12:04:52 UTC
Pending review for 4-0.
Comment 6 Commit Notification 2013-05-27 13:51:49 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8fb2124310e9f21ca75f2a39b95cdf021173e36&h=libreoffice-4-0

range names need to be checked upper case, fdo#64031


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Björn Michaelsen 2013-06-26 11:56:11 UTC
So, I cant reproduce this on 4.0.3 or on 3.6.7~rc1.
Looking at the backlog:

 http://cgit.freedesktop.org/libreoffice/core/commit/?id=45b19123a63f23fe37b11b063d7567bf79ef09aa

seems like the most likely cause and thus is already present in all 3.6 versions and thus no minor release regression. Therefore: Setting version to 3.6.0 alpha.