range names need to be checked upper case, fdo#64031

Change-Id: I540821fd7058bf0da27d955c9d966a10dd21ec94